--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Game - Snake</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <link rel="stylesheet" type="text/css" href="./main.css">
-  <script src="./main.js" defer></script>
-</head>
-<body>
-  <div id="game-container"></div>
-</body>
+  <head>
+    <title>jimboobar.github.io</title>
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"
+    />
+    <link rel="stylesheet" type="text/css" href="./main.css" />
+    <script src="./app.js" defer></script>
+    <script src="./background.js" defer></script>
+  </head>
+  <body>
+    <div id="app-background"></div>
+    <div id="app-root"></div>
+  </body>
 </html>
